[package]
name = "cch23-arturaz"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.34.1"
shuttle-runtime = "0.34.1"
tokio = "1.28.2"
tracing = "0.1.40"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
ordered-float = "4.2.0"
base64 = "0.21.5"
anyhow = "1.0.75"